Fixed navbar jump with position fix

--- a/app.css
+++ b/app.css
@@ -156,7 +156,9 @@ header {
   grid-template-areas: 'menu' 'text';
   height: 180px;
   margin: 0 auto;
-  width: 90%; }
+  width: 100%; }
+  .sub_title .menuWrapper {
+    height: 40px; }
   .sub_title .menu {
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -166,8 +168,10 @@ header {
     grid-area: menu;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     justify-items: center;
-    position: fixed;
-    width: 90%; }
+    margin: 0 auto;
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+    width: 100%; }
     .sub_title .menu li a {
       color: inherit;
       text-decoration: none; }
@@ -188,6 +192,7 @@ header {
       .sub_title .menu {
         background-color: unset; } }
   .sub_title .sticky_header {
+    position: fixed;
     top: 0;
     z-index: 1000; }
   .sub_title .about_me {
